[package]
name = "sapper_std"
version = "0.1.2"
authors = ["Mike Tang <miketang84@outlook.com>"]
license = "MIT"
description = "A wrapper for rapid coding for sapper web framework."
readme = "README.md"
repository = "https://github.com/sappworks/sapper_std"
documentation = "https://docs.rs/sapper_std"
homepage = "https://github.com/sappworks/sapper_std"

[dependencies]
serde = "1.0"
serde_json = "1.0"
sapper = "0.1"
sapper_query = "0.1"
sapper_body = "0.1"
sapper_tmpl = "0.1"
sapper_session = "0.1"
sapper_logger = "0.1"


