[package]
name = "sapper_std"
version = "0.1.7"
authors = ["Mike Tang <miketang84@outlook.com>"]
license = "MIT"
description = "A wrapper for rapid coding for sapper web framework."
readme = "README.md"
repository = "https://github.com/sappworks/sapper_std"
documentation = "https://docs.rs/sapper_std"
homepage = "https://github.com/sappworks/sapper_std"

[dependencies]
serde = "1.0"
serde_json = "1.0"
sapper = "0.1"
sapper_query = "0.1"
sapper_body = "0.1"
sapper_tmpl = "0.1"
sapper_session = "0.1"
sapper_logger = "0.1"

[features]
default = []
monitor = ["sapper_tmpl/monitor"]

#[patch.crates-io]
#sapper_query = { git = 'https://github.com/sappworks/sapper_query.git' }
#sapper_body = { git = 'https://github.com/sappworks/sapper_body.git' }
#sapper_tmpl = { git = 'https://github.com/sappworks/sapper_tmpl.git' }
#sapper_session = { git = 'https://github.com/sappworks/sapper_session.git' }
#sapper_logger = { git = 'https://github.com/sappworks/sapper_logger.git' }
